--- a/example/Makefile
+++ b/example/Makefile
@@ -7,12 +7,11 @@ start: ./tmp/db/registry ./tmp/db/node1
 	icegridnode --Ice.Config=node1.config &
 
 	@echo -- waiting registry to start...
-	@while ! netstat -lptn 2> /dev/null | grep ":4061" > /dev/null; do \
-	    sleep 1; \
-	done
+	@while ! ss -ltnH 2>/dev/null | grep -q ':4061'; do sleep 1; done
 
 stop:
 	$(IG_ADMIN) -e "node shutdown node1"
+	@while ss -ltnH 2>/dev/null | grep -q ':4061'; do sleep 1; done
 
 add-app: start app.xml
 	$(IG_ADMIN) -e "application add app.xml"
